# creditRisk_DecisionEngine

./: README.md  mlflow.db  pyproject.toml
assets/models/: baselineModelNorm.joblib  baselineModelWoes.joblib  lgb_norm.joblib  lgb_woe.joblib  xgb_norm.joblib  xgb_woe.joblib
data/final/: X_test.parquet  final_model.pkl  preds.parquet
data/processed/: X_test.parquet  X_train.parquet  y_test.parquet  y_train.parquet
data/raw/: Data Dictionary.xls
notebook/: 01_sample.ipynb  02_explore.ipynb  02_explore_.ipynb  03_modify.ipynb  03_modify_.ipynb  04.00_model_baseLine_.ipynb  04.00_model_baseline.ipynb  04.00_model_lgbm.ipynb  04.01_model_deepLearning.ipynb  04.01_model_lgbm.ipynb  04.01_model_lgbm_.ipynb  04.02_model_xgboost.ipynb  04.02_model_xgboost_.ipynb  05_assess.ipynb  05_models_evaluation.ipynb
src/creditrisk_decisionengine/app/: Home.py
src/creditrisk_decisionengine/app/pages/: 1_Batch_Simulation.py  2_Individual_Simulation.py
