[project]
name = "creditrisk-decisionengine"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.51.0,<0.52.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "optbinning (>=0.21.0,<0.22.0)",
    "optuna (>=4.9.0,<5.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "creditrisk_decisionengine", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
